--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,17 @@
 {
-  "tasks": {
-    "start": "deno run -A --watch=static/,routes/ dev.ts"
-  },
-  "importMap": "./import_map.json",
-  "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact"
-  }
+    "tasks": {
+        "start": "deno run -A --watch=static/,routes/ dev.ts",
+        "typecheck": "deno check ."
+    },
+    "importMap": "./import_map.json",
+    "compilerOptions": {
+        "jsx": "react-jsx",
+        "jsxImportSource": "preact"
+    },
+    "fmt": {
+        "semiColons": false,
+        "indentWidth": 4,
+        "singleQuote": true,
+        "proseWrap": "preserve"
+    }
 }
