--- a/deno.json
+++ b/deno.json
@@ -1,23 +1,46 @@
 {
-    "tasks": {
-        "start": "deno run -A --watch=static/,routes/ dev.ts"
-    },
-    "importMap": "./import_map.json",
-    "compilerOptions": {
-        "jsx": "react-jsx",
-        "jsxImportSource": "preact"
-    },
-    "fmt": {
-        "semiColons": false,
-        "indentWidth": 4,
-        "singleQuote": true,
-        "proseWrap": "preserve"
-    },
-    "lint": {
-        "include": ["routes/", "utils/"],
-        "rules": {
-            "include": ["no-unused-vars"],
-            "exclude": ["ban-types"]
-        }
+  "tasks": {
+    "start": "deno run -A --watch=static/,routes/ dev.ts"
+  },
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact"
+  },
+  "fmt": {
+    "semiColons": false,
+    "indentWidth": 4,
+    "singleQuote": true,
+    "proseWrap": "preserve"
+  },
+  "lint": {
+    "include": [
+      "routes/",
+      "utils/"
+    ],
+    "rules": {
+      "include": [
+        "no-unused-vars"
+      ],
+      "exclude": [
+        "ban-types"
+      ],
+      "tags": [
+        "fresh",
+        "recommended"
+      ]
     }
+  },
+  "imports": {
+    "$fresh/": "https://deno.land/x/fresh@1.3.1/",
+    "preact": "https://esm.sh/preact@10.15.1",
+    "preact/": "https://esm.sh/preact@10.15.1/",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.0",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
+    "twind": "https://esm.sh/twind@0.16.19",
+    "twind/": "https://esm.sh/twind@0.16.19/",
+    "$std/": "https://deno.land/std@0.189.0/",
+    "$gfm": "https://deno.land/x/gfm@0.1.26/mod.ts",
+    "$feed": "https://esm.sh/feed@4.2.2"
+  }
 }
