--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,9 @@
 {
   "tasks": {
-    "start": "deno run -A --watch=static/,routes/ dev.ts"
+    "start": "deno run -A --watch=static/,routes/ dev.ts",
+    "build": "deno run -A dev.ts build",
+    "preview": "deno run -A main.ts"
   },
-  "importMap": "./import_map.json",
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
@@ -25,7 +26,24 @@
       "exclude": [
         "ban-types"
       ],
-      "tags": []
+      "tags": [
+        "fresh",
+        "recommended"
+      ]
     }
+  },
+  "imports": {
+    "$fresh/": "https://deno.land/x/fresh@1.4.1/",
+    "preact": "https://esm.sh/preact@10.15.1",
+    "preact/": "https://esm.sh/preact@10.15.1/",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
+    "twind": "https://esm.sh/twind@0.16.19",
+    "twind/": "https://esm.sh/twind@0.16.19/",
+    "@twind/typography": "https://esm.sh/@twind/typography@0.0.2",
+    "$std/": "https://deno.land/std@0.189.0/",
+    "$gfm": "https://deno.land/x/gfm@0.1.26/mod.ts",
+    "$feed": "https://esm.sh/feed@4.2.2"
   }
 }
