add font family post

--- a/deno.json
+++ b/deno.json
@@ -12,7 +12,10 @@
     "semiColons": false,
     "indentWidth": 2,
     "singleQuote": true,
-    "proseWrap": "preserve"
+    "proseWrap": "preserve",
+    "exclude": [
+      "_fresh"
+    ]
   },
   "lint": {
     "include": [
@@ -30,10 +33,13 @@
         "fresh",
         "recommended"
       ]
-    }
+    },
+    "exclude": [
+      "_fresh"
+    ]
   },
   "imports": {
-    "$fresh/": "https://deno.land/x/fresh@1.4.1/",
+    "$fresh/": "https://deno.land/x/fresh@1.4.2/",
     "preact": "https://esm.sh/preact@10.15.1",
     "preact/": "https://esm.sh/preact@10.15.1/",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
