Update package.json and scripts/gen_blog_templete.js to change gen script and improve filename formatting

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "scripts": {
-    "gen": "node scripts/gen.js"
+    "gen": "node scripts/gen_blog_templete.js"
   },
   "dependencies": {
     "@clack/prompts": "^0.7.0"
